# KickThemOut-v3

./: .gitignore  Cargo.toml  LICENSE  README.md  kickthemout.command  kickthemout_v3.py  requirements.txt
.github/workflows/: release.yml
pkg/arch/: PKGBUILD
src/: app.rs  error.rs  lib.rs  main.rs  platform.rs
src/scanner/: arp.rs  interface.rs  mod.rs  vendor.rs
src/spoofer/: arp_spoof.rs  mod.rs
src/ui/: menu.rs  mod.rs  table.rs
