[package]
name = "kickthemout"
version = "3.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["KickThemOut Contributors"]
description = "Easily remove unwanted devices from your local network"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# Network
pnet = "0.35"
pnet_datalink = "0.35"
ipnetwork = "0.20"

# Async
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
hex = "0.4"

# Error handling
thiserror = "1"
anyhow = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user"] }

[profile.release]
opt-level = 3
lto = true
strip = true